Fix saved plan chat planning workflow